// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Atoms/Paragraph ] should render Centered 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-centered"
  >
    Lose consequence night studies Wolves should wizards destruction burglar? All right, then. Keep your secrets.
  </p>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Colors 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  />
  <p
    class="paragraph color-muted size-md weight-normal"
  />
  <p
    class="paragraph color-inverted size-md weight-normal"
  />
  <p
    class="paragraph color-primary size-md weight-normal"
  />
  <p
    class="paragraph color-tertiary size-md weight-normal"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Default 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Inline 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-inline"
  >
    Swords are no more.
  </p>
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Monospace 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-monospace"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Sizes 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-xs weight-normal"
  />
  <p
    class="paragraph color-base size-sm weight-normal"
  />
  <p
    class="paragraph color-base size-md weight-normal"
  />
  <p
    class="paragraph color-base size-lg weight-normal"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Striked 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal is-striked"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Atoms/Paragraph ] should render Weights 1`] = `
<DocumentFragment>
  <p
    class="paragraph color-base size-md weight-normal"
  />
  <p
    class="paragraph color-base size-md weight-medium"
  />
  <p
    class="paragraph color-base size-md weight-semibold"
  />
</DocumentFragment>
`;
